--- a/ConvertingTextDataIntoAudioStream/ConvertingTextDataIntoAudioStream/UI/Extras/ExtrasStoryboard.storyboard
+++ b/ConvertingTextDataIntoAudioStream/ConvertingTextDataIntoAudioStream/UI/Extras/ExtrasStoryboard.storyboard
@@ -33,6 +33,10 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i9H-FQ-Qhr">
+                                                    <rect key="frame" x="97" y="-43" width="316" height="130"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                </pickerView>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -50,6 +54,13 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="vaN-ex-FO5">
+                                                    <rect key="frame" x="238" y="7" width="118" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="volumeChanged:" destination="IZy-dJ-YkJ" eventType="valueChanged" id="AC4-wY-NO2"/>
+                                                    </connections>
+                                                </slider>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -67,6 +78,13 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="HV5-bu-EkO">
+                                                    <rect key="frame" x="238" y="7" width="118" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="rateChanged:" destination="IZy-dJ-YkJ" eventType="valueChanged" id="jhJ-r4-h0a"/>
+                                                    </connections>
+                                                </slider>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -84,6 +102,13 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.5" maxValue="2" translatesAutoresizingMaskIntoConstraints="NO" id="4YT-0X-hVH">
+                                                    <rect key="frame" x="238" y="7" width="118" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="pitchChanged:" destination="IZy-dJ-YkJ" eventType="valueChanged" id="jwL-Oe-seT"/>
+                                                    </connections>
+                                                </slider>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -101,6 +126,13 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.20000000000000001" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="IgP-Tn-Pua">
+                                                    <rect key="frame" x="238" y="7" width="118" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="pausesChenged:" destination="IZy-dJ-YkJ" eventType="valueChanged" id="UaM-mN-NCM"/>
+                                                    </connections>
+                                                </slider>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -155,15 +187,19 @@
                     <navigationItem key="navigationItem" title="Extras" largeTitleDisplayMode="always" id="bIh-cV-s4Z"/>
                     <connections>
                         <outlet property="languageRateLabel" destination="usW-8i-GGU" id="H4r-Ay-UpR"/>
+                        <outlet property="pausesSlider" destination="IgP-Tn-Pua" id="Qh4-lg-U3j"/>
                         <outlet property="pitchMultiplierLabel" destination="gEa-Tv-Jfs" id="dnc-yf-mEe"/>
+                        <outlet property="pitchSlider" destination="4YT-0X-hVH" id="UTI-Z2-Gaa"/>
                         <outlet property="postUtteranceDelayLabel" destination="Mnq-SJ-TGq" id="IUo-fZ-7yH"/>
                         <outlet property="rateLabel" destination="fBD-v1-t0X" id="wUP-ZT-t4d"/>
+                        <outlet property="rateSlider" destination="HV5-bu-EkO" id="5Fo-bg-Mhv"/>
                         <outlet property="volumeLabel" destination="K90-fF-lfE" id="Jvr-Wd-SFG"/>
+                        <outlet property="volumeSlider" destination="vaN-ex-FO5" id="42A-h2-8Sg"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KLx-OL-hTG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="453.62318840579712" y="-60.267857142857139"/>
+            <point key="canvasLocation" x="1199" y="-829"/>
         </scene>
         <!--Extras-->
         <scene sceneID="rpa-Gy-6KP">
