--- a/ConvertingTextDataIntoAudioStream/ConvertingTextDataIntoAudioStream/UI/StartPage/StartPageStoryboard.storyboard
+++ b/ConvertingTextDataIntoAudioStream/ConvertingTextDataIntoAudioStream/UI/StartPage/StartPageStoryboard.storyboard
@@ -16,6 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="Dns-5l-flO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IsE-BT-eUb">
+                                <rect key="frame" x="51" y="170" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Label">
+                                        <attributes>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="mig-TX-WA8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
