--- a/ConvertingTextDataIntoAudioStream/ConvertingTextDataIntoAudioStream/UI/Player/PlayerView.xib
+++ b/ConvertingTextDataIntoAudioStream/ConvertingTextDataIntoAudioStream/UI/Player/PlayerView.xib
@@ -8,13 +8,13 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlayerControlsView" customModule="ConvertingTextDataIntoAudioStream" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlayerView" customModule="ConvertingTextDataIntoAudioStream" customModuleProvider="target">
             <connections>
                 <outlet property="PlayAndPauseButton" destination="aZ2-dD-Muh" id="kJr-3E-s8f"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PlayerControlsView" customModule="ConvertingTextDataIntoAudioStream" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -22,37 +22,45 @@
                     <rect key="frame" x="8" y="8" width="398" height="35"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cwY-kJ-5IN">
-                            <rect key="frame" x="0.0" y="7.5" width="283.5" height="20.5"/>
+                            <rect key="frame" x="0.0" y="7.5" width="265.5" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OGq-3P-vOh">
-                            <rect key="frame" x="291.5" y="6.5" width="25" height="22"/>
-                            <state key="normal" image="backward.fill" catalog="system"/>
+                            <rect key="frame" x="273.5" y="6.5" width="31" height="22"/>
+                            <state key="normal" image="backward.fill" catalog="system">
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </state>
                             <connections>
-                                <action selector="previousSentenceButtonTapped:" destination="-1" eventType="touchUpInside" id="rWm-EU-Hfj"/>
+                                <action selector="backwardButtonTapped:" destination="-1" eventType="touchUpInside" id="rWm-EU-Hfj"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZ2-dD-Muh">
-                            <rect key="frame" x="324.5" y="6.5" width="14.5" height="22"/>
-                            <state key="normal" image="pause.fill" catalog="system"/>
+                            <rect key="frame" x="312.5" y="6.5" width="17" height="22"/>
+                            <state key="normal" image="pause.fill" catalog="system">
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </state>
                             <connections>
-                                <action selector="PlayAndPauseButtonTapped:" destination="-1" eventType="touchUpInside" id="h9K-eE-xNw"/>
+                                <action selector="playAndPauseButtonTapped:" destination="-1" eventType="touchUpInside" id="h9K-eE-xNw"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aYg-eb-K2K">
-                            <rect key="frame" x="347" y="6.5" width="18" height="22"/>
-                            <state key="normal" image="stop.fill" catalog="system"/>
+                            <rect key="frame" x="337.5" y="6.5" width="21.5" height="22"/>
+                            <state key="normal" image="stop.fill" catalog="system">
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </state>
                             <connections>
                                 <action selector="stopButtonTapped:" destination="-1" eventType="touchUpInside" id="6Mb-Q0-FdS"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ym7-he-Ejp">
-                            <rect key="frame" x="373" y="6.5" width="25" height="22"/>
-                            <state key="normal" image="forward.fill" catalog="system"/>
+                            <rect key="frame" x="367" y="6.5" width="31" height="22"/>
+                            <state key="normal" image="forward.fill" catalog="system">
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </state>
                             <connections>
-                                <action selector="nextSentenceButtonTapped:" destination="-1" eventType="touchUpInside" id="r6U-nh-EW4"/>
+                                <action selector="forwardButtonTapped:" destination="-1" eventType="touchUpInside" id="r6U-nh-EW4"/>
                             </connections>
                         </button>
                     </subviews>
@@ -69,7 +77,7 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-809" y="381"/>
+            <point key="canvasLocation" x="-1010" y="316"/>
         </view>
     </objects>
     <resources>
